@@ -51,6 +51,7 @@ Version 1.3.3+svn:
    * the movement hint use multiline, colors and bigger font to display
      terrain defense and turns to reach
    * restore search of no-team-only map labels
+   * ability to delete Add-Ons
  * Miscellaneous and bugfixes
    * fix bug #4299: word wrap for menus with very long option strings
    * various bugfixes and code cleanups
